--- a/polaris_bringup/CMakeLists.txt
+++ b/polaris_bringup/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(polaris_description)
+project(polaris_bringup)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -22,7 +22,7 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
-install(DIRECTORY ros2_control config
+install(DIRECTORY launch config
   DESTINATION share/${PROJECT_NAME}
 )
 
