--- a/ndi_controllers/rigid_pose_broadcaster/package.xml
+++ b/ndi_controllers/rigid_pose_broadcaster/package.xml
@@ -22,6 +22,7 @@
   <depend>rclcpp_lifecycle</depend>
   <depend>geometry_msgs</depend>
   <depend>realtime_tools</depend>
+  <depend>ndi_msgs</depend>
 
   <test_depend>ament_cmake_gmock</test_depend>
   <test_depend>controller_manager</test_depend>
