--- a/polaris_bringup/config/polaris_broadcaster.yaml
+++ b/polaris_bringup/config/polaris_broadcaster.yaml
@@ -3,11 +3,28 @@ controller_manager:
     update_rate: 10
 
     rigid_pose_broadcaster:
-      type: ndi_controllers/RigidPoseBroadcaster
+      type: rigid_pose_broadcaster/RigidPoseBroadcaster
+
+
+    joint_state_broadcaster:
+      type: joint_state_broadcaster/JointStateBroadcaster
 
 
 rigid_pose_broadcaster:
   ros__parameters:  
+    state_publish_rate: 10
+    state_interface_names:
+      - pose.position.x
+      - pose.position.y
+      - pose.position.z
+      - pose.orientation.x
+      - pose.orientation.y
+      - pose.orientation.z
+      - pose.orientation.w
+
+
+joint_state_broadcaster:
+  ros__parameters:
     state_publish_rate: 10
     state_interface_names:
       - pose.position.x
