added NDI api source code to the project tree

--- a/ndi_hardware/CMakeLists.txt
+++ b/ndi_hardware/CMakeLists.txt
@@ -18,11 +18,26 @@ find_package(rclcpp REQUIRED)
 find_package(rclcpp_lifecycle REQUIRED)
 
 set(EXT_LIBS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external)
-include_directories(${EXT_LIBS_DIR})
-add_library(ndicapi_library SHARED IMPORTED GLOBAL)
-set_target_properties(ndicapi_library PROPERTIES IMPORTED_LOCATION ${EXT_LIBS_DIR}/libndicapi.so)
 
-## COMPILE
+## COMPILE CAPI SHARED LIBRARY
+
+file(GLOB NDICAPI_LIBRARY_SRC ${EXT_LIBS_DIR}/ndi_capi/src/*.cpp)
+
+add_library(
+  ndicapi_library
+  SHARED
+  ${NDICAPI_LIBRARY_SRC}
+)
+
+target_include_directories(ndicapi_library PUBLIC
+  ${EXT_LIBS_DIR}/ndi_capi/include
+  ${EXT_LIBS_DIR}/ndi_capi/src/include)
+
+include_directories(${EXT_LIBS_DIR})
+# add_library(ndicapi_library SHARED IMPORTED GLOBAL)
+# set_target_properties(ndicapi_library PROPERTIES IMPORTED_LOCATION ${EXT_LIBS_DIR}/libndicapi.so)
+
+# # COMPILE
 add_library(
   ${PROJECT_NAME}
   SHARED
@@ -48,9 +63,16 @@ target_link_libraries(${PROJECT_NAME} ndicapi_library yaml-cpp)
 # Causes the visibility macros to use dllexport rather than dllimport,
 # which is appropriate when building the dll but not consuming it.
 target_compile_definitions(${PROJECT_NAME} PRIVATE "NDI_HARDWARE_BUILDING_LIBRARY")
+
 # prevent pluginlib from using boost
 target_compile_definitions(${PROJECT_NAME} PUBLIC "PLUGINLIB__DISABLE_BOOST_FUNCTIONS")
 pluginlib_export_plugin_description_file(hardware_interface ndi_hardware_plugin.xml)
+
+# INSTALL ndicapi_library
+install(
+  TARGETS ndicapi_library
+  DESTINATION lib/external
+)
 
 # INSTALL
 install(
@@ -63,18 +85,18 @@ install(
 )
 
 # install(DIRECTORY launch config
-#   DESTINATION share/${PROJECT_NAME}
+# DESTINATION share/${PROJECT_NAME}
 # )
-
 if(BUILD_TESTING)
   find_package(ament_cmake_gtest REQUIRED)
 endif()
 
-## EXPORTS
+# # EXPORTS
 ament_export_include_directories(
   include
 )
 ament_export_libraries(
+  ndicapi_library
   ${PROJECT_NAME}
 )
 ament_export_dependencies(
@@ -84,4 +106,3 @@ ament_export_dependencies(
   rclcpp_lifecycle
 )
 ament_package()
-
